Change the path for OUTPUT_PATH1, 2, and 3 in 'GUI Custom Tkinter.ipynb'

--- a/GUI Custom Tkinter.ipynb
+++ b/GUI Custom Tkinter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "5c6e663a-5f6a-4124-9382-f17132326531",
    "metadata": {},
    "outputs": [],
@@ -21,13 +21,13 @@
     "\n",
     "\n",
     "# Set the OUTPUT_PATH and ASSETS_PATH directly\n",
-    "OUTPUT_PATH1 = Path(r\"C:\\Users\\gamers\\Documents\\Tkinter-Designer-master\\figma\\build 1\\build\")\n",
+    "OUTPUT_PATH1 = Path(r\".\\figma\\build 1\\build\")\n",
     "ASSETS_PATH1 = OUTPUT_PATH1 / Path(\"assets/frame0\")\n",
     "\n",
-    "OUTPUT_PATH2 = Path(r\"C:\\Users\\gamers\\Documents\\Tkinter-Designer-master\\figma\\build 2\\build\")\n",
+    "OUTPUT_PATH2 = Path(r\".\\figma\\build 2\\build\")\n",
     "ASSETS_PATH2 = OUTPUT_PATH2 / Path(\"assets/frame0\")\n",
     "\n",
-    "OUTPUT_PATH3 = Path(r\"C:\\Users\\gamers\\Documents\\Tkinter-Designer-master\\figma\\build 4\\build\")\n",
+    "OUTPUT_PATH3 = Path(r\".\\figma\\build 4\\build\")\n",
     "ASSETS_PATH3 = OUTPUT_PATH3 / Path(\"assets/frame0\")\n",
     "\n",
     "def relative_to_assets1(path: str) -> Path:\n",
@@ -793,13 +793,21 @@
     "    app = DataAnalystApp()\n",
     "    app.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdda4543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py310_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
