Change to run file GUI name.

--- a/Data Analyst Job Roles in Canada.ipynb
+++ b/Data Analyst Job Roles in Canada.ipynb
@@ -2142,12 +2142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c71dfe0b-43cd-4b11-b5e5-c245a0b1173a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run project_1.py"
+    "%run GUI_Development.py"
    ]
   },
   {
@@ -2265,9 +2265,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py310_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
